fix: move Mapbox zoom controls up to avoid help icon overlap
- Set mapboxgl-ctrl-bottom-right bottom position to 70px
- Prevents zoom controls from being covered by help button
- Help button remains at 20px from bottom

--- a/src/styles.css
+++ b/src/styles.css
@@ -538,6 +538,12 @@ label:has(input[type='checkbox']:disabled) {
   bottom: 0 !important;
 }
 
+/* Mapbox Zoom Controls */
+.mapboxgl-ctrl-bottom-right {
+  bottom: 70px !important;
+  margin-bottom: 0 !important;
+}
+
 /* Help Button */
 .help-btn {
   position: absolute;
